--- a/RecursionPbms.ipynb
+++ b/RecursionPbms.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------Sorting List using recursion--------------------\n",
     "def sorting(l):\n",
@@ -35,11 +43,11 @@
     "    \n",
     "    #print(\"before:\",l2)\n",
     "    tem = l2.pop()\n",
-    "    #print(\"tem:\",tem)\n",
-    "    print(\"after:\",l2)\n",
+    "#    print(\"tem:\",tem)\n",
+    "#    print(\"after:\",l2)\n",
     "    insertAtPosition(l2 , val)\n",
     "    l2.insert(len(l2), tem) \n",
-    "    #print(\"after\", l2)\n",
+    "#     print(\"after\", l2)\n",
     "\n",
     "l1 = [3,2,5,1,6,0,]    \n",
     "sorting(l1) \n",
@@ -48,9 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before : [2, 3, 4, 5, 9, 6, 4, 2, 6, 9, 0, 1, 3, 4]\n",
+      "after: [4, 3, 1, 0, 9, 6, 2, 4, 6, 9, 5, 4, 3, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------Reverse a stack--------------------\n",
     "\n",
@@ -73,18 +90,26 @@
     "    s2.append(x)\n",
     "    \n",
     "s1 = [2,3,4,5,9,6,4,2,6,9,0,1,3,4]   \n",
-    "test = s1.copy()\n",
+    "# test = s1.copy()\n",
     "print(\"before :\",s1)\n",
     "reversing(s1)   \n",
-    "print(test[::-1])\n",
-    "print(s1 == test[::-1])"
+    "print(\"after:\",s1)\n",
+    "# print(s1 == test[::-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "final: False\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------Grammer Generration--------------------\n",
     "# 0\n",
@@ -115,9 +140,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maving disk: 1  from  sorce  to  destination\n",
+      "maving disk: 2  from  sorce  to  help\n",
+      "maving disk: 1  from  destination  to  help\n",
+      "maving disk: 3  from  sorce  to  destination\n",
+      "maving disk: 1  from  help  to  sorce\n",
+      "maving disk: 2  from  help  to  destination\n",
+      "maving disk: 1  from  sorce  to  destination\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------Tower of Hanoi--------------------\n",
     "\n",
@@ -136,18 +175,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'', 'c', 'bc', 'ab', 'b', 'a', 'ac', 'abc'}\n"
+     ]
+    }
+   ],
    "source": [
-    "    # ------------------Subset of string--------------------\n",
+    "# ------------------Subset of string--------------------\n",
     "def subset(str1,op):\n",
     "    global counter\n",
     "    global set1\n",
     "    if len(str1) == 0:\n",
     "        counter += 1\n",
     "        set1.add(op)\n",
-    "        print(op)\n",
+    "#         print(op)\n",
     "        return \n",
     "    \n",
     "    op1 = op\n",
@@ -166,9 +213,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a b c\n",
+      "a bc\n",
+      "ab c\n",
+      "abc\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------Find all combinations of adding Spaces in String --------------------\n",
     "\n",
@@ -195,9 +253,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ab1c\n",
+      "ab1C\n",
+      "aB1c\n",
+      "aB1C\n",
+      "Ab1c\n",
+      "Ab1C\n",
+      "AB1c\n",
+      "AB1C\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------Permutation with case change--------------------\n",
     "\n",
@@ -225,9 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['((()))', '(()())', '(())()', '()(())', '()()()']\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------Generate all Balanced Parentheses--------------------\n",
     "\n",
@@ -257,9 +338,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11111\n",
+      "11110\n",
+      "11101\n",
+      "11100\n",
+      "11011\n",
+      "11010\n",
+      "11001\n",
+      "10111\n",
+      "10110\n",
+      "10101\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------Print N-bit binary numbers having more 1’s than 0’s for any prefix--------------------\n",
     "\n",
@@ -285,14 +383,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "24\n"
      ]
     }
    ],
@@ -309,8 +407,8 @@
     "    josephus(index, k, arr)\n",
     "    return\n",
     "    \n",
-    "n = 5\n",
-    "k = 2\n",
+    "n = 40\n",
+    "k = 7\n",
     "# reducing k by 1 to maintain the index of arr\n",
     "k -= 1\n",
     "arr = []\n",
@@ -321,13 +419,6 @@
     "josephus(index,k,arr)    \n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
