--- a/RecursionPbms.ipynb
+++ b/RecursionPbms.ipynb
@@ -419,6 +419,65 @@
     "josephus(index,k,arr)    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Combination of number: [10]\n",
+      "Combination of number: [8, 6]\n",
+      "Combination of number: [7, 5, 4, 3, 1]\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -----------------Sum of Power-----------------\n",
+    "counter = 0\n",
+    "\n",
+    "def solve(NRoot,N,finalSum,x,arr):\n",
+    "    global counter\n",
+    "    if NRoot == 0 or finalSum == x:\n",
+    "        if finalSum == x:\n",
+    "            counter += 1\n",
+    "            print(\"Combination of numbers:\",arr)\n",
+    "        \n",
+    "        arr.clear()  \n",
+    "        return  \n",
+    "   \n",
+    "    op1 = finalSum + NRoot ** N\n",
+    "    op2 = finalSum    \n",
+    "    \n",
+    "    arr.append(NRoot)\n",
+    "# created new instance of arr    \n",
+    "    arr1 = arr.copy()\n",
+    "    \n",
+    "    if op1 <= x:\n",
+    "        solve(NRoot-1, N, op1, x, arr1) \n",
+    "        solve(NRoot-1, N, op2, x, arr[:-1]) \n",
+    "    else:\n",
+    "        solve(NRoot -1, N, finalSum, x, arr[:-1])   \n",
+    "\n",
+    "X = 100\n",
+    "N = 2\n",
+    "NRoot = int(X ** (1/N)) \n",
+    "finalSum = 0\n",
+    "arr = []\n",
+    "solve(NRoot,N,finalSum,X,arr)\n",
+    "print(counter)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
